DBMSBenchmarker: 1 script per phase

--- a/tpcx-ai/connections.config
+++ b/tpcx-ai/connections.config
@@ -1,12 +1,14 @@
 [
 	{
-		'name': "MADLib",
+        'name': 'MADLib',
+        'info': 'This is a demo of PostgreSQL',
         'active': True,
+        'dialect': 'PostgreSQL',
          'JDBC': {
             'driver': "org.postgresql.Driver",
             'auth': ["postgres", "postgres"],
             'url': 'jdbc:postgresql://localhost:5432/postgres?reWriteBatchedInserts=true',
-            'jar': 'postgresql-42.7.3.jar'
+            'jar': 'jars/postgresql-42.7.3.jar'
         }
     },
 ]
