--- a/tpcx-ai/queries-serving.config
+++ b/tpcx-ai/queries-serving.config
@@ -1,6 +1,6 @@
 {
 	'name': 'TPCx-AI',
-	'intro': 'All Phases per Use Case',
+	'intro': 'Some queries for some use cases',
 	'connectionmanagement': {
 		'timeout': 10800,
 		'singleConnection': True
@@ -17,32 +17,32 @@
 "SET maintenance_work_mem = '1GB'",
 "SELECT pg_reload_conf()",
 			],
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "Prepare Database",
 			'query': "call create_evaluation_results_table()",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC01 - Training Preprocess",
 			'query': "CALL uc01_preprocess('train', 'uc01_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC01 - Training",
 			'query': "CALL uc01_train('uc01_train_preprocessed', 'uc01_model')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC01 - Scoring Preprocess",
 			'query': "CALL uc01_preprocess('score', 'uc01_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC01 - Scoring Evaluate",
 			'query': "CALL uc01_score('uc01_score_preprocessed', 'uc01_model')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC01 - Serve",
@@ -52,27 +52,27 @@
 		{
 			'title': "UC03 - Training Preprocess",
 			'query': "CALL uc03_preprocess('train', 'uc03_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC03 - Training",
 			'query': "call uc03_train('uc03_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC03 - Scoring Preprocess",
 			'query': "call uc03_preprocess('score', 'uc03_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC03 - Scoring Apply",
 			'query': "call uc03_predict('uc03_score_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC03 - Scoring Evaluate",
 			'query': "call uc03_score('uc03_score_preprocessed', 'uc03_score_predictions', 'uc03_score_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC03 - Serve",
@@ -82,27 +82,27 @@
 		{
 			'title': "UC04 - Training Preprocessing",
 			'query': "call uc04_preprocess('train', 'uc04_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC04 - Training",
 			'query': "call uc04_train('uc04_train_preprocessed', 'uc04_model')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC04 - Scoring Preprocessing",
 			'query': "call uc04_preprocess('score', 'uc04_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC04 - Scoring Apply",
 			'query': "call uc04_predict('uc04_score_preprocessed', 'uc04_model', 'uc04_score_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC04 - Scoring Evaluate",
 			'query': "CALL uc04_score('uc04_score_predictions', 'uc04_score_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC04 - Serve",
@@ -112,27 +112,27 @@
 		{
 			'title': "UC06 - Training Preprocess",
 			'query': "call uc06_preprocess('train', 'uc06_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC06 - Training",
 			'query': "CALL uc06_train('uc06_train_preprocessed', 'uc06_model', True)",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC06 - Scoring Preprocess",
 			'query': "call uc06_preprocess('score', 'uc06_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC06 - Scoring Apply",
 			'query': "CALL uc06_predict('uc06_score_preprocessed','uc06_model', 'uc06_score_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC06 - Scoring Evaluate",
 			'query': "CALL uc06_score('uc06_score_predictions', 'uc06_score_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC06 - Serve",
@@ -142,32 +142,32 @@
 		{
 			'title': "UC07 - Training Preprocess",
 			'query': "CALL uc07_preprocess('train', 'uc07_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC07 - Training",
 			'query': "call uc07_train('uc07_train_preprocessed', 'uc07_model', True)",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC07 - Scoring Preprocess",
 			'query': "CALL uc07_preprocess('score', 'uc07_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC07 - Predict",
 			'query': "call uc07_predict('uc07_score_preprocessed', 'uc07_model', 'uc07_score_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC07 - Predict with NumPy",
 			'query': "call uc07_predict_numpy('uc07_model', 'uc07_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC07 - Scoring Evaluate",
 			'query': "call uc07_score('uc07_score_predictions', 'uc07_score_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC07 - Serve",
@@ -177,57 +177,57 @@
 		{
 			'title': "UC08 - Training Preprocessing",
 			'query': "call uc08_preprocess('train', 'uc08_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC08 - Training",
 			'query': "CALL uc08_train('uc08_train_preprocessed', 'uc08_model')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC08 - Scoring Preprocessing",
 			'query': "call uc08_preprocess('score', 'uc08_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC08 - Scoring Apply",
 			'query': "CALL uc08_predict('uc08_score_preprocessed','uc08_model', 'uc08_score_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC08 - Scoring Evaluate",
 			'query': "call uc08_score('uc08_score_predictions', 'uc08_score_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC08 - Serve",
 			'query': "CALL uc08_serve('uc08_serve_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC10 - Training Preprocess",
 			'query': "CALL uc10_preprocess('train', 'uc10_train_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC10 - Training",
 			'query': "CALL uc10_train('uc10_train_preprocessed', 'uc10_model', False)",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC10 - Scoring Preprocess",
 			'query': "CALL uc10_preprocess('score', 'uc10_score_preprocessed')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC10 - Scoring Predict",
 			'query': "CALL uc10_predict('uc10_score_preprocessed', 'uc10_model', 'uc10_score_predictions')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC10 - Scoring Evaluate",
 			'query': "CALL uc10_score('uc10_score_predictions', 'uc10_score_results')",
-			'active': True,
+			'active': False,
 		},
 		{
 			'title': "UC10 - Serve",
@@ -237,7 +237,7 @@
 		{
 			'title': "Show Evaluate Store",
 			'query': "SELECT * FROM public.evaluation_results",
-			'active': True,
+			'active': False,
 			'timer':
 			{
 				'datatransfer':
@@ -259,7 +259,7 @@ WHERE
 ORDER BY
     (quote_ident(table_schema) || '.' || quote_ident(table_name)) ASC;
 """,
-			'active': True,
+			'active': False,
 			'timer':
 			{
 				'datatransfer':
