DBMSBenchmarker: 1 script per phase improved

--- a/tpcx-ai/queries-preparing-and-training.config
+++ b/tpcx-ai/queries-preparing-and-training.config
@@ -60,12 +60,12 @@
 		{
 			'title': "UC08 - Training Preprocessing",
 			'query': "call uc08_preprocess('train', 'uc08_train_preprocessed')",
-			'active': False,
+			'active': True,
 		},
 		{
 			'title': "UC08 - Training",
 			'query': "CALL uc08_train('uc08_train_preprocessed', 'uc08_model')",
-			'active': False,
+			'active': True,
 		},
 		{
 			'title': "UC10 - Training Preprocess",
