--- a/tpcx-ai/queries-scoring.config
+++ b/tpcx-ai/queries-scoring.config
@@ -107,5 +107,40 @@
 			'query': "CALL uc10_score('uc10_score_predictions', 'uc10_score_results')",
 			'active': True,
 		},
+		{
+			'title': "Show Evaluate Store",
+			'query': "SELECT * FROM public.evaluation_results",
+			'active': True,
+			'timer':
+			{
+				'datatransfer':
+				{
+					'active': True,
+					'compare': 'result',
+				},
+			}
+		},
+		{
+			'title': "Show Artefacts",
+			'query': """SELECT
+    table_schema , table_name AS table_full_name,
+    pg_size_pretty(pg_total_relation_size(quote_ident(table_schema) || '.' || quote_ident(table_name))) AS total_size
+FROM
+    information_schema.tables
+WHERE
+    table_type = 'BASE TABLE' and (table_name like '%uc0%' or table_name like '%uc1%')
+ORDER BY
+    (quote_ident(table_schema) || '.' || quote_ident(table_name)) ASC;
+""",
+			'active': True,
+			'timer':
+			{
+				'datatransfer':
+				{
+					'active': True,
+					'compare': 'result',
+				},
+			}
+		},
 	]
 }
