--- a/tpcx-ai/queries-scoring.config
+++ b/tpcx-ai/queries-scoring.config
@@ -1,39 +1,12 @@
 {
 	'name': 'TPCx-AI',
-	'intro': 'All Phases per Use Case',
+	'intro': 'Scoring Phase',
 	'connectionmanagement': {
 		'timeout': 10800,
 		'singleConnection': True
 	},
 	'queries':
 	[
-		{
-			'title': "Set configuration",
-			'query': [
-"SET work_mem TO '16GB'",
-"SET temp_buffers = '16GB'",
-"SET max_parallel_workers = 16",
-"SET max_parallel_workers_per_gather = 8",
-"SET maintenance_work_mem = '1GB'",
-"SELECT pg_reload_conf()",
-			],
-			'active': True,
-		},
-		{
-			'title': "Prepare Database",
-			'query': "call create_evaluation_results_table()",
-			'active': True,
-		},
-		{
-			'title': "UC01 - Training Preprocess",
-			'query': "CALL uc01_preprocess('train', 'uc01_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC01 - Training",
-			'query': "CALL uc01_train('uc01_train_preprocessed', 'uc01_model')",
-			'active': True,
-		},
 		{
 			'title': "UC01 - Scoring Preprocess",
 			'query': "CALL uc01_preprocess('score', 'uc01_score_preprocessed')",
@@ -42,21 +15,6 @@
 		{
 			'title': "UC01 - Scoring Evaluate",
 			'query': "CALL uc01_score('uc01_score_preprocessed', 'uc01_model')",
-			'active': True,
-		},
-		{
-			'title': "UC01 - Serve",
-			'query': "CALL uc01_serve('uc01_model', 'uc01_serve_results')",
-			'active': True,
-		},
-		{
-			'title': "UC03 - Training Preprocess",
-			'query': "CALL uc03_preprocess('train', 'uc03_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC03 - Training",
-			'query': "call uc03_train('uc03_train_preprocessed')",
 			'active': True,
 		},
 		{
@@ -75,21 +33,6 @@
 			'active': True,
 		},
 		{
-			'title': "UC03 - Serve",
-			'query': "CALL uc03_serve('uc03_serve_results')",
-			'active': True,
-		},
-		{
-			'title': "UC04 - Training Preprocessing",
-			'query': "call uc04_preprocess('train', 'uc04_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC04 - Training",
-			'query': "call uc04_train('uc04_train_preprocessed', 'uc04_model')",
-			'active': True,
-		},
-		{
 			'title': "UC04 - Scoring Preprocessing",
 			'query': "call uc04_preprocess('score', 'uc04_score_preprocessed')",
 			'active': True,
@@ -102,21 +45,6 @@
 		{
 			'title': "UC04 - Scoring Evaluate",
 			'query': "CALL uc04_score('uc04_score_predictions', 'uc04_score_results')",
-			'active': True,
-		},
-		{
-			'title': "UC04 - Serve",
-			'query': "CALL uc04_serve('uc04_serve_results')",
-			'active': True,
-		},
-		{
-			'title': "UC06 - Training Preprocess",
-			'query': "call uc06_preprocess('train', 'uc06_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC06 - Training",
-			'query': "CALL uc06_train('uc06_train_preprocessed', 'uc06_model', True)",
 			'active': True,
 		},
 		{
@@ -135,53 +63,18 @@
 			'active': True,
 		},
 		{
-			'title': "UC06 - Serve",
-			'query': "CALL uc06_serve('uc06_serve_results')",
-			'active': True,
-		},
-		{
-			'title': "UC07 - Training Preprocess",
-			'query': "CALL uc07_preprocess('train', 'uc07_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC07 - Training",
-			'query': "call uc07_train('uc07_train_preprocessed', 'uc07_model', True)",
-			'active': True,
-		},
-		{
 			'title': "UC07 - Scoring Preprocess",
 			'query': "CALL uc07_preprocess('score', 'uc07_score_preprocessed')",
 			'active': True,
 		},
 		{
-			'title': "UC07 - Predict",
+			'title': "UC07 - Scoring Apply",
 			'query': "call uc07_predict('uc07_score_preprocessed', 'uc07_model', 'uc07_score_predictions')",
-			'active': True,
-		},
-		{
-			'title': "UC07 - Predict with NumPy",
-			'query': "call uc07_predict_numpy('uc07_model', 'uc07_predictions')",
 			'active': True,
 		},
 		{
 			'title': "UC07 - Scoring Evaluate",
 			'query': "call uc07_score('uc07_score_predictions', 'uc07_score_results')",
-			'active': True,
-		},
-		{
-			'title': "UC07 - Serve",
-			'query': "call uc07_serve('uc07_serve_results')",
-			'active': True,
-		},
-		{
-			'title': "UC08 - Training Preprocessing",
-			'query': "call uc08_preprocess('train', 'uc08_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC08 - Training",
-			'query': "CALL uc08_train('uc08_train_preprocessed', 'uc08_model')",
 			'active': True,
 		},
 		{
@@ -200,38 +93,18 @@
 			'active': True,
 		},
 		{
-			'title': "UC08 - Serve",
-			'query': "CALL uc08_serve('uc08_serve_results')",
-			'active': True,
-		},
-		{
-			'title': "UC10 - Training Preprocess",
-			'query': "CALL uc10_preprocess('train', 'uc10_train_preprocessed')",
-			'active': True,
-		},
-		{
-			'title': "UC10 - Training",
-			'query': "CALL uc10_train('uc10_train_preprocessed', 'uc10_model', False)",
-			'active': True,
-		},
-		{
 			'title': "UC10 - Scoring Preprocess",
 			'query': "CALL uc10_preprocess('score', 'uc10_score_preprocessed')",
 			'active': True,
 		},
 		{
-			'title': "UC10 - Scoring Predict",
+			'title': "UC10 - Scoring Apply",
 			'query': "CALL uc10_predict('uc10_score_preprocessed', 'uc10_model', 'uc10_score_predictions')",
 			'active': True,
 		},
 		{
 			'title': "UC10 - Scoring Evaluate",
 			'query': "CALL uc10_score('uc10_score_predictions', 'uc10_score_results')",
-			'active': True,
-		},
-		{
-			'title': "UC10 - Serve",
-			'query': "CALL uc10_serve('uc10_serve_results')",
 			'active': True,
 		},
 		{
