--- a/tpcx-ai/queries-serving.config
+++ b/tpcx-ai/queries-serving.config
@@ -20,7 +20,7 @@
 		},
 		{
 			'title': "UC03 - Serve",
-			'query': "CALL uc03_serve('uc03_serve_preprocessed', 'uc03_serve_results')",
+			'query': "CALL uc03_serve('uc03_serve_preprocessed_{STREAM}', 'uc03_serve_results_{STREAM}')",
 			'active': True,
 			'parameter': {
 				'STREAM': {
@@ -31,7 +31,7 @@
 		},
 		{
 			'title': "UC04 - Serve",
-			'query': "call uc04_serve('uc04_serve_preprocessed', 'uc04_serve_results')",
+			'query': "call uc04_serve('uc04_serve_preprocessed_{STREAM}', 'uc04_serve_results_{STREAM}')",
 			'active': True,
 			'parameter': {
 				'STREAM': {
@@ -42,7 +42,7 @@
 		},
 		{
 			'title': "UC06 - Serve",
-			'query': "CALL uc06_serve('uc06_serve_preprocessed', 'uc06_serve_results')",
+			'query': "CALL uc06_serve('uc06_serve_preprocessed_{STREAM}', 'uc06_serve_results_{STREAM}')",
 			'active': True,
 			'parameter': {
 				'STREAM': {
@@ -53,7 +53,7 @@
 		},
 		{
 			'title': "UC07 - Serve",
-			'query': "call uc07_serve('uc07_serve_preprocessed', 'uc07_serve_results')",
+			'query': "call uc07_serve('uc07_serve_preprocessed_{STREAM}', 'uc07_serve_results_{STREAM}')",
 			'active': True,
 			'parameter': {
 				'STREAM': {
@@ -64,7 +64,7 @@
 		},
 		{
 			'title': "UC08 - Serve",
-			'query': "call uc08_serve('uc08_serve_preprocessed','uc08_serve_results')",
+			'query': "call uc08_serve('uc08_serve_preprocessed_{STREAM}','uc08_serve_results_{STREAM}')",
 			'active': True,
 			'parameter': {
 				'STREAM': {
@@ -75,7 +75,7 @@
 		},
 		{
 			'title': "UC10 - Serve",
-			'query': "call uc10_serve('uc10_serve_preprocessed', 'uc10_serve_results')",
+			'query': "call uc10_serve('uc10_serve_preprocessed_{STREAM}', 'uc10_serve_results_{STREAM}')",
 			'active': True,
 			'parameter': {
 				'STREAM': {
