--- a/images/TPCx-AI/Dockerfile_benchmarker
+++ b/images/TPCx-AI/Dockerfile_benchmarker
@@ -38,7 +38,7 @@ LABEL description="This container runs a bash script that runs phases of the TPC
 ENV TPCxAI_SCALE_FACTOR=1
 ENV TPCxAI_NODE_COUNT=1
 ENV TPCxAI_NODE_NUMBER=1
-ENV TPCxAI_SEED=4234567890
+ENV TPCxAI_SEED=1234
 ENV TPCxAI_STAGE=training
 ENV TPCxAI_UC=
 # Set the working directory in the container
